--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
 body{
+     font-family: 'Ramabhadra', sans-serif;
  background-color: yellow;
+}
+h1,h3{
+    font-family: 'Alfa Slab One', cursive;
 }
